# panos

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  panos.toml
scripts/: export_onnx.py
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/config/: loader.rs  mod.rs
src/file_ops/: history.rs  mod.rs  mover.rs  remover.rs
src/organizer/: mod.rs  scanner.rs  undo.rs  watcher.rs
src/rules/: ai.rs  matcher.rs  mod.rs
tests/: main_test.rs  mod_test.rs
tests/common/: mod.rs
tests/config/: loader_test.rs  mod.rs
tests/file_ops/: mod.rs  mover_test.rs
tests/organizer/: mod.rs  scanner_test.rs  undo_test.rs  watcher_test.rs
tests/rules/: ai_test.rs  matcher_test.rs  mod.rs
